<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:background="@drawable/dialog_product"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="40dp">

        <EditText
            android:id="@+id/name_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/name_product"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/number_gram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/number_gram"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/number_ccal"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/number_ccal"
                android:inputType="number" />

            <Spinner
                android:id="@+id/ccal_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/ccal_type" />
        </LinearLayout>

        <Button
            android:id="@+id/button_add_product"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#0288D1"
            android:text="@string/add_product"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

    </LinearLayout>

</FrameLayout>
